2003-05-24  Matti Aarnio  <mea@zmailer.org>

	* include/shmmib.h, router/daemonsub.c, router/rfc822.c,
	  scheduler/scheduler.c, scheduler/transport.c,
	  smtpserver/smtpcmds.c, smtpserver/smtpdata.c,
	  smtpserver/smtpetrn.c, smtpserver/smtptls.c:
	    - New counter variables, changed the magic version
	      (mapping will be rejected if there is old persistent file
	       in the system!) 
	    - More code to do SHM counting/tracking

	* utils/webtools/mailq-m.php,  utils/webtools/mailq-q.php,
	  utils/webtools/mailq-v.php:
	    An experimental set of web-tools to do ZMailer status
	    display in web..  Developed for friends to look into
	    a busy system without using command-line tools..
	    Also as concepts for doing some advanced tinkering.

2003-05-23  Matti Aarnio  <mea@zmailer.org>

	* lib/zshmmibattach.c, include/libz.h, include/shmmib.h,
	  scheduler/scheduler.c, router/daemonsub.c, scheduler/update.c,
	  scheduler/threads.c, lib/Makefile.in, SiteConfig.in,
	  scheduler/mailq.c, man/mailq.1.in, router/router.c,
	  smtpserver/smtpserver.h, smtpserver/smtpchild.c,
	  smtpserver/smtpserver.c:
	    - Added new library function -- attach global
	      MTA-instance specific shared memory mapped file
	      to some particular running process.
	    - Added new counters and gauges, far in excess of
	      official RFC listed gauges..  SNMP shall coalesc
	      subsystem counters and gauges.
	    - Using this global shared segment for the time-server, too.

	* utils/perl/Makefile.in:
	    Doing "make clean" shall not crash even if previous
	    "make" hasn't been run in a subdirectory, where things
	    are done with 'Makefile.PL' way...

	* transports/smtp/smtp.c:
	    Additional "once" counter that breaks the loop, if
	    other ways don't stop it -- when doing "more recipients"
	    retry things.

2003-05-22  Matti Aarnio  <mea@zmailer.org>

	* configure.in, transports/smtp/smtp.h, transports/smtp/smtp.c: