@@ -1904,86 +1904,102 @@ static void print_shm __((void))
   printf("ZMailer SHM segment dump; Magic=0x%08X\n", M.magic);
   printf("Time_now                   %lu\n", (unsigned long)time(NULL));
 
-  printf("mtaIncomingSMTPSERVERprocesses    %u\n", M.mtaIncomingSMTPSERVERprocesses);
+  printf("mtaRouterMasterPID              %5u",M.mtaRouterMasterPID);
+  if (kill(M.mtaRouterMasterPID, 0) < 0 && errno == ESRCH) printf(" NOT PRESENT!");
+  printf("\n");
 
-  printf("mtaIncomingParallelSMTPconnects   %u\n", M.mtaIncomingParallelSMTPconnects);
-  printf("mtaIncomingParallelSMTPSconnects  %u\n", M.mtaIncomingParallelSMTPSconnects);
-  printf("mtaIncomingParallelSUBMITconnects %u\n", M.mtaIncomingParallelSUBMITconnects);
+  printf("mtaSchedulerMasterPID           %5u",M.mtaSchedulerMasterPID);
+  if (kill(M.mtaSchedulerMasterPID, 0) < 0 && errno == ESRCH) printf(" NOT PRESENT!");
+  printf("\n");
 
+  printf("mtaSmtpServerMasterPID          %5u",M.mtaSmtpServerMasterPID);
+  if (kill(M.mtaSmtpServerMasterPID, 0) < 0 && errno == ESRCH) printf(" NOT PRESENT!");
+  printf("\n");
 
-  printf("mtaIncomingSMTPconnects        %u\n", M.mtaIncomingSMTPconnects);
-  printf("mtaIncomingSMTPSconnects       %u\n", M.mtaIncomingSMTPSconnects);
-  printf("mtaIncomingSUBMITconnects      %u\n", M.mtaIncomingSUBMITconnects);
-  printf("mtaIncomingSMTPTLSes           %u\n", M.mtaIncomingSMTPTLSes);
+printf("mtaIncomingSMTPSERVERprocesses    %3u\n", M.mtaIncomingSMTPSERVERprocesses);
 
-  printf("mtaIncomingSMTP_MAIL           %u\n", M.mtaIncomingSMTP_MAIL);
-  printf("mtaIncomingSMTP_MAIL_ok        %u\n", M.mtaIncomingSMTP_MAIL_ok);
-  printf("mtaIncomingSMTP_MAIL_bad       %u\n", M.mtaIncomingSMTP_MAIL_bad);
-  printf("mtaIncomingSMTP_RCPT           %u\n", M.mtaIncomingSMTP_RCPT);
-  printf("mtaIncomingSMTP_RCPT_ok        %u\n", M.mtaIncomingSMTP_RCPT_ok);
-  printf("mtaIncomingSMTP_RCPT_bad       %u\n", M.mtaIncomingSMTP_RCPT_bad);
-  printf("mtaIncomingSMTP_HELO           %u\n", M.mtaIncomingSMTP_HELO);
-  printf("mtaIncomingSMTP_EHLO           %u\n", M.mtaIncomingSMTP_EHLO);
-  printf("mtaIncomingSMTP_ETRN           %u\n", M.mtaIncomingSMTP_ETRN);
-  printf("mtaIncomingSMTP_HELP           %u\n", M.mtaIncomingSMTP_HELP);
-  printf("mtaIncomingSMTP_DATA           %u\n", M.mtaIncomingSMTP_DATA);
-  printf("mtaIncomingSMTP_DATA_ok        %u\n", M.mtaIncomingSMTP_DATA_ok);
-  printf("mtaIncomingSMTP_DATA_bad       %u\n", M.mtaIncomingSMTP_DATA_bad);
-  printf("mtaIncomingSMTP_BDAT           %u\n", M.mtaIncomingSMTP_BDAT);
-  printf("mtaIncomingSMTP_BDAT_ok        %u\n", M.mtaIncomingSMTP_BDAT_ok);
-  printf("mtaIncomingSMTP_BDAT_bad       %u\n", M.mtaIncomingSMTP_BDAT_bad);
-  printf("mtaIncomingSMTP_DATA_KBYTES    %u\n", M.mtaIncomingSMTP_DATA_KBYTES);
-  printf("mtaIncomingSMTP_BDAT_KBYTES    %u\n", M.mtaIncomingSMTP_BDAT_KBYTES);
-  printf("mtaIncomingSMTP_spool_KBYTES   %u\n", M.mtaIncomingSMTP_spool_KBYTES);
+printf("mtaIncomingParallelSMTPconnects   %3u\n",M.mtaIncomingParallelSMTPconnects);
+printf("mtaIncomingParallelSMTPSconnects  %3u\n",M.mtaIncomingParallelSMTPSconnects);
+printf("mtaIncomingParallelSUBMITconnects %3u\n",M.mtaIncomingParallelSUBMITconnects);
 
-  printf("mtaReceivedMessagesSs          %u\n", M.mtaReceivedMessagesSs);
-  printf("mtaReceivedRecipientsSs        %u\n", M.mtaReceivedRecipientsSs);
-  printf("mtaTransmittedMessagesSs       %u\n", M.mtaTransmittedMessagesSs);
-  printf("mtaTransmittedRecipientsSs     %u\n", M.mtaTransmittedRecipientsSs);
+  printf("mtaIncomingSMTPconnects        %9u\n", M.mtaIncomingSMTPconnects);
+  printf("mtaIncomingSMTPSconnects       %9u\n", M.mtaIncomingSMTPSconnects);
+  printf("mtaIncomingSUBMITconnects      %9u\n", M.mtaIncomingSUBMITconnects);
+  printf("mtaIncomingSMTPTLSes           %9u\n", M.mtaIncomingSMTPTLSes);
 
-  printf("mtaRouterProcesses             %u\n", M.mtaRouterProcesses);
-  printf("mtaReceivedMessagesRt          %u\n", M.mtaReceivedMessagesRt);
-  printf("mtaReceivedRecipientsRt        %u\n", M.mtaReceivedRecipientsRt);
-  printf("mtaTransmittedMessagesRt       %u\n", M.mtaTransmittedMessagesRt);
-  printf("mtaTransmittedRecipientsRt     %u\n", M.mtaTransmittedRecipientsRt);
-  printf("mtaStoredMessagesRt            %u\n", M.mtaStoredMessagesRt);
-  printf("mtaStoredRecipientsRt          %u\n", M.mtaStoredRecipientsRt);
-  printf("mtaReceivedVolumeRt            %u\n", M.mtaReceivedVolumeRt);
-  printf("mtaStoredVolumeRt              %u\n", M.mtaStoredVolumeRt);
-  printf("mtaTransmittedVolumeRt         %u\n", M.mtaTransmittedVolumeRt);
+  printf("mtaIncomingSMTP_MAIL           %9u\n", M.mtaIncomingSMTP_MAIL);
+  printf("mtaIncomingSMTP_MAIL_ok        %9u\n", M.mtaIncomingSMTP_MAIL_ok);
+  printf("mtaIncomingSMTP_MAIL_bad       %9u\n", M.mtaIncomingSMTP_MAIL_bad);
+  printf("mtaIncomingSMTP_RCPT           %9u\n", M.mtaIncomingSMTP_RCPT);
+  printf("mtaIncomingSMTP_RCPT_ok        %9u\n", M.mtaIncomingSMTP_RCPT_ok);
+  printf("mtaIncomingSMTP_RCPT_bad       %9u\n", M.mtaIncomingSMTP_RCPT_bad);
+  printf("mtaIncomingSMTP_HELO           %9u\n", M.mtaIncomingSMTP_HELO);
+  printf("mtaIncomingSMTP_EHLO           %9u\n", M.mtaIncomingSMTP_EHLO);
+  printf("mtaIncomingSMTP_ETRN           %9u\n", M.mtaIncomingSMTP_ETRN);
+  printf("mtaIncomingSMTP_HELP           %9u\n", M.mtaIncomingSMTP_HELP);
+  printf("mtaIncomingSMTP_DATA           %9u\n", M.mtaIncomingSMTP_DATA);
+  printf("mtaIncomingSMTP_DATA_ok        %9u\n", M.mtaIncomingSMTP_DATA_ok);
+  printf("mtaIncomingSMTP_DATA_bad       %9u\n", M.mtaIncomingSMTP_DATA_bad);
+  printf("mtaIncomingSMTP_BDAT           %9u\n", M.mtaIncomingSMTP_BDAT);
+  printf("mtaIncomingSMTP_BDAT_ok        %9u\n", M.mtaIncomingSMTP_BDAT_ok);
+  printf("mtaIncomingSMTP_BDAT_bad       %9u\n", M.mtaIncomingSMTP_BDAT_bad);
+  printf("mtaIncomingSMTP_DATA_KBYTES    %9u\n", M.mtaIncomingSMTP_DATA_KBYTES);
+  printf("mtaIncomingSMTP_BDAT_KBYTES    %9u\n", M.mtaIncomingSMTP_BDAT_KBYTES);
+  printf("mtaIncomingSMTP_spool_KBYTES   %9u\n", M.mtaIncomingSMTP_spool_KBYTES);
 
-  printf("mtaReceivedMessagesSc          %u\n", M.mtaReceivedMessagesSc);
-  printf("mtaReceivedRecipientsSc        %u\n", M.mtaReceivedRecipientsSc);
-  printf("mtaTransmittedMessagesSc       %u\n", M.mtaTransmittedMessagesSc);
-  printf("mtaTransmittedRecipientsSc     %u\n", M.mtaTransmittedRecipientsSc);
-  printf("mtaStoredMessagesSc            %u\n", M.mtaStoredMessagesSc);
-  printf("mtaStoredRecipientsSc          %u\n", M.mtaStoredRecipientsSc);
-  printf("mtaReceivedVolumeSc            %u\n", M.mtaReceivedVolumeSc);
-  printf("mtaStoredVolumeSc              %u\n", M.mtaStoredVolumeSc);
-  printf("mtaTransmittedVolumeSc         %u\n", M.mtaTransmittedVolumeSc);
-  printf("mtaStoredThreadsSc             %u\n", M.mtaStoredThreadsSc);
-  printf("mtaTransportAgentsActiveSc     %u\n", M.mtaTransportAgentsActiveSc);
-  printf("mtaTransportAgentsIdleSc       %u\n", M.mtaTransportAgentsIdleSc);
-  printf("mtaOutgoingSmtpConnects        %u\n", M.mtaOutgoingSmtpConnects);
-  printf("mtaOutgoingSmtpConnectFails    %u\n", M.mtaOutgoingSmtpConnectFails);
-  printf("mtaOutgoingSmtpSTARTTLS        %u\n", M.mtaOutgoingSmtpSTARTTLS);
-  printf("mtaOutgoingSmtpMAIL            %u\n", M.mtaOutgoingSmtpMAIL);
-  printf("mtaOutgoingSmtpRCPT            %u\n", M.mtaOutgoingSmtpRCPT);
-  printf("mtaOutgoingSmtpDATA            %u\n", M.mtaOutgoingSmtpDATA);
-  printf("mtaOutgoingSmtpBDAT            %u\n", M.mtaOutgoingSmtpBDAT);
-  printf("mtaOutgoingSmtpDATAvolume      %u\n", M.mtaOutgoingSmtpDATAvolume);
-  printf("mtaOutgoingSmtpBDATvolume      %u\n", M.mtaOutgoingSmtpBDATvolume);
-  printf("mtaOutgoingSmtpMAILok          %u\n", M.mtaOutgoingSmtpMAILok);
-  printf("mtaOutgoingSmtpRCPTok          %u\n", M.mtaOutgoingSmtpRCPTok);
-  printf("mtaOutgoingSmtpDATAok          %u\n", M.mtaOutgoingSmtpDATAok);
-  printf("mtaOutgoingSmtpBDATok          %u\n", M.mtaOutgoingSmtpBDATok);
-  printf("mtaOutgoingSmtpDATAvolumeOK    %u\n", M.mtaOutgoingSmtpDATAvolumeOK);
-  printf("mtaOutgoingSmtpBDATvolumeOK    %u\n", M.mtaOutgoingSmtpBDATvolumeOK);
-  printf("mtaSpoolFreeSpace              %u\n", M.mtaSpoolFreeSpace);
-  printf("mtaLogFreeSpace                %u\n", M.mtaLogFreeSpace);
-  printf("mtaSuccessfulConvertedMessages %u\n", M.mtaSuccessfulConvertedMessages);
-  printf("mtaFailedConvertedMessages     %u\n", M.mtaFailedConvertedMessages);
-  printf("mtaLoopsDetected               %u\n", M.mtaLoopsDetected);
+  printf("mtaReceivedMessagesSs          %9u\n", M.mtaReceivedMessagesSs);
+  printf("mtaReceivedRecipientsSs        %9u\n", M.mtaReceivedRecipientsSs);
+  printf("mtaTransmittedMessagesSs       %9u\n", M.mtaTransmittedMessagesSs);
+  printf("mtaTransmittedRecipientsSs     %9u\n", M.mtaTransmittedRecipientsSs);
+
+  printf("mtaRouterProcesses             %9u\n", M.mtaRouterProcesses);
+  printf("mtaReceivedMessagesRt          %9u\n", M.mtaReceivedMessagesRt);
+  printf("mtaReceivedRecipientsRt        %9u\n", M.mtaReceivedRecipientsRt);
+  printf("mtaTransmittedMessagesRt       %9u\n", M.mtaTransmittedMessagesRt);
+  printf("mtaTransmittedRecipientsRt     %9u\n", M.mtaTransmittedRecipientsRt);
+
+  printf("mtaReceivedVolumeRt            %9u\n", M.mtaReceivedVolumeRt);
+  printf("mtaTransmittedVolumeRt         %9u\n", M.mtaTransmittedVolumeRt);
+  printf("mtaTransmittedVolume2Rt        %9u\n", M.mtaTransmittedVolume2Rt);
+
+  printf("mtaStoredMessagesRt            %9u\n", M.mtaStoredMessagesRt);
+  printf("mtaStoredRecipientsRt          %9u\n", M.mtaStoredRecipientsRt);
+  printf("mtaStoredVolumeRt              %9u\n", M.mtaStoredVolumeRt);
+
+  printf("mtaReceivedMessagesSc          %9u\n", M.mtaReceivedMessagesSc);
+  printf("mtaReceivedRecipientsSc        %9u\n", M.mtaReceivedRecipientsSc);
+  printf("mtaTransmittedMessagesSc       %9u\n", M.mtaTransmittedMessagesSc);
+  printf("mtaTransmittedRecipientsSc     %9u\n", M.mtaTransmittedRecipientsSc);
+  printf("mtaStoredMessagesSc            %9u\n", M.mtaStoredMessagesSc);
+  printf("mtaStoredRecipientsSc          %9u\n", M.mtaStoredRecipientsSc);
+  printf("mtaReceivedVolumeSc            %9u\n", M.mtaReceivedVolumeSc);
+  printf("mtaStoredVolumeSc              %9u\n", M.mtaStoredVolumeSc);
+  printf("mtaTransmittedVolumeSc         %9u\n", M.mtaTransmittedVolumeSc);
+  printf("mtaStoredThreadsSc             %9u\n", M.mtaStoredThreadsSc);
+  printf("mtaTransportAgentsActiveSc     %9u\n", M.mtaTransportAgentsActiveSc);
+  printf("mtaTransportAgentsIdleSc       %9u\n", M.mtaTransportAgentsIdleSc);
+  printf("mtaOutgoingSmtpConnects        %9u\n", M.mtaOutgoingSmtpConnects);
+  printf("mtaOutgoingSmtpConnectFails    %9u\n", M.mtaOutgoingSmtpConnectFails);
+  printf("mtaOutgoingSmtpSTARTTLS        %9u\n", M.mtaOutgoingSmtpSTARTTLS);
+  printf("mtaOutgoingSmtpMAIL            %9u\n", M.mtaOutgoingSmtpMAIL);
+  printf("mtaOutgoingSmtpRCPT            %9u\n", M.mtaOutgoingSmtpRCPT);
+  printf("mtaOutgoingSmtpDATA            %9u\n", M.mtaOutgoingSmtpDATA);
+  printf("mtaOutgoingSmtpBDAT            %9u\n", M.mtaOutgoingSmtpBDAT);
+  printf("mtaOutgoingSmtpDATAvolume      %9u\n", M.mtaOutgoingSmtpDATAvolume);
+  printf("mtaOutgoingSmtpBDATvolume      %9u\n", M.mtaOutgoingSmtpBDATvolume);
+  printf("mtaOutgoingSmtpMAILok          %9u\n", M.mtaOutgoingSmtpMAILok);
+  printf("mtaOutgoingSmtpRCPTok          %9u\n", M.mtaOutgoingSmtpRCPTok);
+  printf("mtaOutgoingSmtpDATAok          %9u\n", M.mtaOutgoingSmtpDATAok);
+  printf("mtaOutgoingSmtpBDATok          %9u\n", M.mtaOutgoingSmtpBDATok);
+  printf("mtaOutgoingSmtpDATAvolumeOK    %9u\n", M.mtaOutgoingSmtpDATAvolumeOK);
+  printf("mtaOutgoingSmtpBDATvolumeOK    %9u\n", M.mtaOutgoingSmtpBDATvolumeOK);
+
+  printf("mtaSpoolFreeSpace              %9u\n", M.mtaSpoolFreeSpace);
+  printf("mtaLogFreeSpace                %9u\n", M.mtaLogFreeSpace);
+
+  printf("mtaSuccessfulConvertedMessages %9u\n", M.mtaSuccessfulConvertedMessages);
+  printf("mtaFailedConvertedMessages     %9u\n", M.mtaFailedConvertedMessages);
+  printf("mtaLoopsDetected               %9u\n", M.mtaLoopsDetected);
 
 
 	exit(0);
