@@ -1,5 +1,8 @@
 2003-05-24  Matti Aarnio  <mea@zmailer.org>
 
+	* scheduler/mailq.c:
+	    More 'mailq -M' printouts.
+
 	* include/shmmib.h, router/daemonsub.c, router/rfc822.c,
 	  scheduler/scheduler.c, scheduler/transport.c,
 	  smtpserver/smtpcmds.c, smtpserver/smtpdata.c,
